--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ APP_SECRET=c9355ba66ccc4bc300250762d2436422
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://homestead:secret@192.168.10.10:3306/mediapark?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+KAYAPOSOFT_URL=https://kayaposoft.com/enrico/json/v2.0
+SUPPORTED_COUNTRIES_URL=https://kayaposoft.com/enrico/json/v2.0/?action=getSupportedCountries
