--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=c9355ba66ccc4bc300250762d2436422
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://homestead:secret@192.168.10.10:3306/mediapark?serverVersion=5.7
+DATABASE_URL=mysql://bd706c640514d5:c11f2c56@us-cdbr-iron-east-04.cleardb.net/heroku_eff906c92cdf53c?reconnect=true
 ###< doctrine/doctrine-bundle ###
 
 KAYAPOSOFT_URL=https://kayaposoft.com/enrico/json/v2.0
