--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=93021c404ace5b122091b0401b9cb866
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://be4b8ee8f111b1:76b7979d@us-cdbr-iron-east-04.cleardb.net/heroku_f04e197ab565799?reconnect=true
+DATABASE_URL=mysql://cmab9vhdy0p3rtex:qqgt1kef0u0vnct2@c584md9egjnm02sk.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/yyrrenljf168hb8u
 ###< doctrine/doctrine-bundle ###
 
 KAYAPOSOFT_URL=https://kayaposoft.com/enrico/json/v2.0
